--- a/Contact.html
+++ b/Contact.html
@@ -130,7 +130,7 @@
       </div>
       <div class="right">
         <ul>
-          <li><a href="Index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="Education.html">Education</a></li>
           <li><a href="Project.html">Project</a></li>
